add_subdirectory(Common)
add_subdirectory(CFG)
add_subdirectory(DoubleLockDetector)
add_subdirectory(NewDoubleLockDetector)
add_subdirectory(RustDoubleLockDetector)
add_subdirectory(UseAfterFreeDetector)
add_subdirectory(NewUseAfterFreeDetector)
add_subdirectory(InvalidFreeDetector)
add_subdirectory(CellIMDetector)
add_subdirectory(NewCellIMDetector)
add_subdirectory(SameLockInSameFuncDetector)
add_subdirectory(PrintLock)
add_subdirectory(PrintManualDrop)
add_subdirectory(AtomicControlDepDetector)